--- a/modelling-neural-network.ipynb
+++ b/modelling-neural-network.ipynb
@@ -5,17 +5,9 @@
    "execution_count": 1,
    "id": "77512aa5-b7e9-4e15-afef-fad1f5c6e051",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: networkx in c:\\users\\adria\\anaconda3\\lib\\site-packages (2.8.4)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#!pip install networkx"
+    "# pip install networkx"
    ]
   },
   {
@@ -23,16 +15,7 @@
    "execution_count": 2,
    "id": "5da9b699-4888-474a-bd61-bb25fabb751a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:From C:\\Users\\adria\\anaconda3\\Lib\\site-packages\\keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import tensorflow as tf\n",
@@ -495,9 +478,7 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "ac9bca45-6cc1-4f4e-a090-2941e9de6f98",
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1232,7 +1213,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
